--- a/.github/workflows/go-version.yaml
+++ b/.github/workflows/go-version.yaml
@@ -17,6 +17,6 @@ on:
 jobs:
   # go version update
   go-version-update:
-    uses: dell/common-github-actions/.github/workflows/go-version-workflow.yaml@main
+    uses: dell/common-github-actions/.github/workflows/go-version-workflow.yaml@test-branch
     name: Go Version Update
     secrets: inherit
